# hey-gpt

./: .gitignore  Cargo.toml  docker-compose.yml  readme.md
src/: main.rs  output.rs  utils.rs
src/data/: args.rs  dtos.rs  mod.rs  model.rs
src/effect/: conversation.rs  gpt_context.rs  gpt_request.rs  mod.rs  output.rs  user.rs
src/states/: data_request.rs  init.rs  mod.rs  preview.rs  request.rs  success.rs
