[package]
name = "hey-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
async-recursion = "1.0.4"
async-trait = "0.1.68"
atty="0.2.*"
clap = { version = "4.2.1", features = ["derive"] }
reqwest = {version = "0.11.16", features = ["json", "stream"]}
serde = { version = "1.0.159", features = ["derive"] }
futures = "0.3"
serde_json = "1.0"
tempfile = "3.5.0"
termion = "2.0.0"
tokio = { version = "1.27.0", features = ["full"] }
log = "0.4"
fern = "0.6"
chrono = { version = "0.4.24", features = ["serde"]}
serde_yaml = "0.9.21"
